fixed about text not showing

--- a/app/style/breakpoints.scss
+++ b/app/style/breakpoints.scss
@@ -78,7 +78,7 @@
     width: 100%;
     margin: auto;
     max-width: none;
-    z-index: 2;
+    z-index: 4;
 
     top: -500%;
     transition: all .2s ease;
